1.4.0
-Added LinearRing.createFromCircle
-Full support kml.IconStyle
-Added LinearRing.toPolygon
-Added map.MapControl
-Added OpenLayers2 supporting (olayer2.js)

1.3.1
-Added leaflet.createLayer
-Added web.buildTable
-Added map.GeolocationFilter
-Added math.RectArea
-Added KML handling
-Added web.openData
-Added leaflet.createKMLLookAt
-Added leaflet.toKMLFeature
-Added leaflet.toKMLString
-Added web.parseCSSColor

1.3.0
-Update geometry types
-Support Dialog margin

1.2.4
-Added hkoapi
-Added data.mergeOptions
-Added web.Dialog

1.2.3
-Fixed DateTimeUtil.toString infinity loop
-Fixed Distance Calculation
-Added data.sort
-Added CoordinateSystem.convert functions

1.2.2
-Added text.toAttrText(), text.toXMLTest();
-Enhance text.toJSText()
-Change and export text.zeroPad
-Update README
-Added data.DateValue supporting
-Added data.LocalDate class
-Added data.Duration.toString()
-Added text.bracketToHTML()
-Added text.isInteger()
-Added map.GPSTrack
-Added geometry.LineString
-Support null tzQhr
-Added math.Vector3
-Enhance declaration files

1.2.1
-Merge Individual class js into namespace js
-Added all declaration files

1.2.0
-Change syntax to follow standard rule for import (see README.md)

1.1.0
-Change syntax to use correct better namespace in module

1.0.1
-Fix some bugs on Timestamp

1.0.0
-Initial Version