@@ -12,6 +12,7 @@ export function loadJSON(url: string, onResultFunc: Function): void;
 export function buildTable(o: object | object[]): string;
 export function openData(data: string, contentType: string, fileName?: string): void;
 export function parseCSSColor(c: string): Color;
+export function handleFileDrop(ele: HTMLElement, hdlr: (file: any)=>void): void;
 
 declare class DialogButton
 {
