@@ -4,6 +4,9 @@
 -Added LinearRing.toPolygon
 -Added map.MapControl
 -Added OpenLayers2 supporting (olayer2.js)
+-Added web.handleFileDrop
+-Added map.WMS
+-Added leaflet.fromLatLngBounds
 
 1.3.1
 -Added leaflet.createLayer
